# MarketSenseAI-Financial-market-intelligence-Multi-Agentic-System-

./: .env.example  .gitignore  Dockerfile  Externat_sites.md  README.md  benchmark_results_20251208_155333.csv  benchmark_results_20251208_163948.csv  patch_synthesis.py  pyproject.toml  requirements.txt
docs/: EVALUATION_ACTION_PLAN.md  EVALUATION_FIXES.md  EVALUATION_GUIDE.md
frontend/: .env.example  app.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css
frontend/app/: layout.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: page.tsx
frontend/components/: custom-loader.tsx  sidebar.tsx
src/adapters/: __init__.py
src/adapters/web/: api_routes.py  fastapi_app.py  routes.py
src/adapters/web/routes/: conversations.py  langchain_memory_routes.py
src/application/agents/: base_agent.py  macro_analyst.py  synthesis_agent.py  technical_analyst.py
src/application/orchestrators/: data_orchestrator.py
src/application/services/: analysis_service.py  conversation_manager.py  data_collector.py  data_service.py  deep_scraper.py  langchain_memory_service.py  news_aggregator.py  rag_service.py
src/config/: __init__.py  settings.py
src/domain/entities/: analysis.py
src/entry_scripts/: diagnostic_api.py
src/evaluation/: EVALUATION_GUIDE.md  __init__.py  evaluation_framework.py  run_evaluation.py  run_perfect_evaluation.py
src/infrastructure/: __init__.py  cache.py  database.py  orm.py
src/infrastructure/repositories/: __init__.py  conversation_repository.py
tests/: test_services.py
