[tool.poetry]
name = "multi-asset-ai"
version = "0.1.0"
description = "Multi-agent AI for Forex & Crypto Market Analysis"
authors = ["odelolasolomon5@gmail.com"]
readme = "README.md"

packages = [
    { include = "adapters", from = "src" },
    { include = "application", from = "src" },
    { include = "config", from = "src" },
    { include = "domain", from = "src" },
    { include = "entry_scripts", from = "src" },
    { include = "infrastructure", from = "src" },
    { include = "models", from = "src" },
    { include = "services", from = "src" },
    { include = "utilities", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.4"
numpy = "^1.24.3"
yfinance = "^0.2.18"
langchain = "^0.1.0"
openai = "^1.3.7"
chromadb = "^0.4.15"
ta = "^0.10.2"
plotly = "^5.17.0"
aiohttp = "^3.9.1"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
httpx = "^0.25.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
torch = "<2.9"
sentence-transformers = "^5.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "src.entry_scripts.start_api:main"
start-worker = "src.entry_scripts.start_worker:main"
